--- a/src/app/cadastrar-agente/cadastrar-agente.component.html
+++ b/src/app/cadastrar-agente/cadastrar-agente.component.html
@@ -1,29 +1,30 @@
 <div class="main-content">
   <div class="container-fluid">
     <div class="row">
-      <div class="col-md-12">
+      <div class="col-md-8">
         <div class="card">
           <div class="header">
             <h4 class="title">Adicionar Agente</h4>
           </div>
           <div class="content">
-            <form>
+            <form (ngSubmit)="addAgente()" [formGroup]="agenteGroup">
               <div class="row">
                 <div class="col-md-12">
                   <div class="form-group">
                     <label>Nome Completo</label>
                     <input type="text" class="form-control" required placeholder="Nome Completo" 
-                    [(ngModel)]="agente.name" name="name">
+                    formControlName="name" name="name">
                   </div>
                   
                 </div>
+                
               </div>
               <div class="row">
                   <div class="col-md-12">
                     <div class="form-group">
                       <label>Email</label>
                       <input type="email" class="form-control" required placeholder="Email" 
-                      [(ngModel)]="agente.email" name="email">
+                      formControlName="email" name="email">
                     </div>
                     
                   </div>
@@ -33,24 +34,34 @@
                       <div class="form-group">
                         <label>Endereco</label>
                         <input type="text" class="form-control" required placeholder="Endereco" 
-                        [(ngModel)]="agente.endereco" name="endereco">
+                        formControlName="endereco" name="endereco">
                       </div>
                       
                     </div>
                   </div>
               <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-12">
                   <div class="form-group">
                     <label>CPF</label>
                     <input type="text" required class="form-control" placeholder="CPF" 
-                    [(ngModel)]="agente.cpf" name="cpf">
+                    formControlName="cpf" name="cpf">
                   </div>
                 </div>
+        
+              </div>
+              <div class="row">
                 <div class="col-md-6">
                   <div class="form-group">
                     <label>Senha</label>
                     <input type="password" required class="form-control" placeholder="Senha"
-                    [(ngModel)]="agente.password" name="password">
+                    formControlName="password" name="password">
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="form-group">
+                    <label>Confirmar Senha</label>
+                    <input type="password" required class="form-control" placeholder="Confirmar Senha"
+                    formControlName="confirmPassword" name="confirmPassword">
                   </div>
                 </div>
               </div>
@@ -58,26 +69,32 @@
                 <div class="col-md-6">
                   <div class="form-group">
                     <label>RG</label>
-                    <input type="number" required class="form-control" placeholder="RG"
-                    [(ngModel)]="agente.rg" name="rg">
+                    <input type="text" required class="form-control" placeholder="RG"
+                    formControlName="rg" name="rg">
                   </div>
                 </div>
                 <div class="col-md-6">
                   <div class="form-group">
                     <label>Telefone</label>
-                    <input type="number" required class="form-control" placeholder="Telefone"
-                    [(ngModel)]="agente.telefone" name="telefone">
+                    <input type="tel" required class="form-control" placeholder="Telefone"
+                    formControlName="telefone" name="telefone">
                   </div>
                 </div>
               </div>
               <div class="row">
                 <div class="col-md-12">
-                  <button class="btn btn-success btn-fill pull-right" type="button" (click)="addAgente()">Cadastrar</button>
+                  <button class="btn btn-danger btn-fill pull-left" type="button" (click)="desativarAgente()" *ngIf="edit && agenteActive">Desativar Agente</button>
+                  <button class="btn btn-primary btn-fill pull-left" type="button" (click)="reativarAgente()" *ngIf="edit && !agenteActive">Reativar Agente</button>
+                  <button class="btn btn-success btn-fill pull-right" type="submit" [disabled]="!agenteGroup.valid || submitted">Cadastrar</button>
                 </div>
               </div>
             </form>
           </div>
         </div>
+      </div>
+      <div class="col-md-4">
+        <app-foto-perfil #fotoPerfil
+        (fotoEdited)="fotoEditada()"></app-foto-perfil>
       </div>
     </div>
   </div>
