--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -12,19 +12,45 @@
                         </a>
                     </div>
                     <div class="content table-responsive table-full-width">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div style="margin-left: 2%;">
+                                    <div class="dropdown">
+                                            <a href="" class="dropdown-toggle" data-toggle="dropdown">
+                                                <p>{{filtroName}}
+                                                    <b class="caret"></b>
+                                                </p>
+                                            </a>
+                                            <ul class="dropdown-menu">
+                                                <li><a href='#' onclick="return false;" (click)="filtro('todos')">Todos</a></li>
+                                                <li><a href='#' onclick="return false;" (click)="filtro('ativos')">Ativos</a></li>
+                                                <li><a href='#' onclick="return false;" (click)="filtro('inativos')">Inativos</a></li>
+                                            </ul>
+                                        </div>
+                                        
+                                </div>
+                                
+                            </div>
+                            <div class="col-md-4" style="margin-left: 2%;">
+                                    <input class="form-control" placeholder="Pesquisar" [(ngModel)]="filtroPesquisa" (keyup)="filtrarPesquisa()">
+                                </div>
+                        </div>
                         <table class="table table-hover table-stripped">
                             <thead>
                                 <tr>
                                     <th>Nome</th>
                                     <th>CPF</th>
                                     <th>Telefone</th>
+                                    <th>Ações</th>
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr *ngFor="let agente of agentes">
+                                <tr *ngFor="let agente of filtros">
                                     <td>{{agente.name}}</td>
                                     <td>{{agente.cpf}}</td>
                                     <td>{{agente.telefone}}</td>
+                                    <td><a [routerLink]="['editar/', agente.id]">
+                                    <button class="btn btn-primary btn-fill"><i class="pe-7s-pen"></i></button></a></td>
                                 </tr>
                             </tbody>
                         </table>
