--- a/src/app/cadastrar-clinica/cadastrar-clinica.component.html
+++ b/src/app/cadastrar-clinica/cadastrar-clinica.component.html
@@ -57,7 +57,9 @@
               </div>
               <div class="row">
                 <div class="col-md-12">
-                  <button class="btn btn-success btn-fill pull-right" type="submit" [disabled]="!clinicaGroup.valid">Cadastrar</button>
+                  <button class="btn btn-danger btn-fill pull-left" type="button" *ngIf="edit && clinicaActive" (click)="desativarClinica()">Desativar Clinica</button>
+                  <button class="btn btn-info btn-fill pull-left" type="button" *ngIf="edit && !clinicaActive" (click)="desativarClinica()">Reativar Clinica</button>
+                  <button class="btn btn-success btn-fill pull-right" type="submit" [disabled]="!clinicaGroup.valid || submitted">Cadastrar</button>
                 </div>
               </div>
             </form>
