--- a/src/app/clinicas/clinicas.component.html
+++ b/src/app/clinicas/clinicas.component.html
@@ -14,6 +14,29 @@
             </a>
           </div>
           <div class="content table-responsive table-full-width">
+              <div class="row">
+                  <div class="col-md-12">
+                      <div style="margin-left: 2%;">
+                          <div class="dropdown">
+                                  <a href="" class="dropdown-toggle" data-toggle="dropdown">
+                                      <p>{{filtroName}}
+                                          <b class="caret"></b>
+                                      </p>
+                                  </a>
+                                  <ul class="dropdown-menu">
+                                      <li><a href='#' onclick="return false;" (click)="filtro('todos')">Todos</a></li>
+                                      <li><a href='#' onclick="return false;" (click)="filtro('ativos')">Ativos</a></li>
+                                      <li><a href='#' onclick="return false;" (click)="filtro('inativos')">Inativos</a></li>
+                                  </ul>
+                              </div>
+                              
+                      </div>
+                      <div class="col-md-4" style="margin-left: 2%;">
+                        <input class="form-control" placeholder="Pesquisar" [(ngModel)]="filtroPesquisa" (keyup)="filtrarPesquisa()">
+                    </div>
+                  </div>
+                  
+              </div>
             <table class="table table-hover table-stripped">
               <thead>
                 <tr>
@@ -23,10 +46,15 @@
                 </tr>
               </thead>
               <tbody>
-                <tr *ngFor="let clinica of clinicas">
+                <tr *ngFor="let clinica of filtros">
                   <td>{{clinica.name}}</td>
                   <td>{{clinica.endereco}}</td>
                   <td>{{clinica.cnpj}}</td>
+                  <td>
+                    <a [routerLink]="['editar/', clinica.id]">
+                      <button class="btn btn-primary btn-fill"><i class="pe-7s-pen"></i></button>
+                    </a>
+                  </td>
                 </tr>
               </tbody>
             </table>
