Estados e cidades na clinica; Route guard de autenticação

--- a/src/app/cadastrar-agente/cadastrar-agente.component.html
+++ b/src/app/cadastrar-agente/cadastrar-agente.component.html
@@ -4,7 +4,7 @@
       <div class="col-md-8">
         <div class="card">
           <div class="header">
-            <h4 class="title">Adicionar Agente</h4>
+            <h4 class="title">{{ edit ? 'Editar agente' : 'Cadastrar Agente'}}</h4>
           </div>
           <div class="content">
             <form (ngSubmit)="addAgente()" [formGroup]="agenteGroup">
