--- a/src/app/cadastrar-clinica/cadastrar-clinica.component.html
+++ b/src/app/cadastrar-clinica/cadastrar-clinica.component.html
@@ -22,19 +22,67 @@
               <div class="row">
                 <div class="col-md-12">
                   <div class="form-group">
-                    <label>CNPJ</label>
+                    <label>CPF/CNPJ</label>
                     <input type="text" class="form-control" required placeholder="CNPJ"
                     formControlName="cnpj">
                   </div>
                 </div>
               </div>
               <div class="row">
-                <div class="col-md-12">
+                <div class="col-md-4">
                   <div class="form-group">
                     <label>Endereço</label>
                     <input type="text" class="form-control" required placeholder="Endereço"
                     formControlName="endereco">
                   </div>
+                </div>
+                <div class="col-md-4">
+                  <div class="form-group">
+                    <label>Estado</label>
+                    <div class="dropdown">
+                      <button 
+                        class="btn btn-default dropdown-toggle" 
+                        type="button" 
+                        id="dropdownEstados" 
+                        data-toggle="dropdown" 
+                        aria-haspopup="true"
+                        aria-expanded="true">
+                      {{estadoName == '' ? 'Selecione um Estado': estadoName}}
+                      </button>
+                      
+                      <ul class="dropdown-menu scrollable-menu" aria-labelledby="dropdownEstados" role="menu">
+                        <li *ngFor="let estado of estados">
+                          <a onclick="return false;" (click)="estadoSelecionado(estado)">
+                          {{estado.sigla + '-' + estado.nome}}
+                        </a>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                  
+                </div>
+                <div class="col-md-4">
+                    <div class="form-group">
+                        <label>Cidade</label>
+                        <div class="dropdown">
+                          <button 
+                            class="btn btn-default dropdown-toggle" 
+                            type="button" 
+                            id="dropdownCidades" 
+                            data-toggle="dropdown" 
+                            aria-haspopup="true"
+                            aria-expanded="true">
+                          {{cidadeName == '' ? 'Selecione um Estado': cidadeName}}
+                          </button>
+                          <ul class="dropdown-menu scrollable-menu" aria-labelledby="dropdownCidades" role="menu">
+                            <li *ngFor="let cidade of cidades">
+                              <a onclick="return false;" (click)="cidadeSelecionada(cidade.nome)">
+                              {{cidade.nome}}
+                            </a>
+                            </li>
+                          </ul>
+                        </div>
+                      </div>
                 </div>
               </div>
 
