Estados e cidades nos agentes; Modelos de cidade e estado

--- a/src/app/cadastrar-agente/cadastrar-agente.component.scss
+++ b/src/app/cadastrar-agente/cadastrar-agente.component.scss
@@ -6,3 +6,9 @@
     max-width: 100%;
     height: auto;
 }
+
+.scrollable-menu {
+    height: auto;
+    max-height: 200px;
+    overflow-x: hidden;
+}
