--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,9 @@
+<ng-container *ngIf="loading">
+<div class="loading-overlay"></div>
+<div class="loading-overlay-image-container">
+    <img src="assets/loading.gif" class="loading-overlay-img"/>
+</div>
+</ng-container>
 <div class="main-content">
     <div class="container-fluid">
         <div class="row">
