--- a/src/app/cadastrar-agente/cadastrar-agente.component.html
+++ b/src/app/cadastrar-agente/cadastrar-agente.component.html
@@ -1,4 +1,5 @@
 <div class="main-content">
+    <ngx-spinner bdColor="rgba(0,0,0,0.5)" size="medium" color="#3498db" type="ball-clip-rotate"></ngx-spinner>
   <div class="container-fluid">
     <div class="row">
       <div class="col-md-8">
