--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -24,8 +24,8 @@
                 </li>
             </ul>
         </nav>
-        <p class="copyright pull-right">
-            &copy; {{test | date: 'yyyy'}} <a href="http://www.creative-tim.com">Creative Tim</a>, made with love for a better web
+        <p class="copyright pull-right" >
+            &copy; {{test | date: 'yyyy'}} <a href="http://www.creative-tim.com" style=" color: rgb(29, 77, 234) ">Creative Tim</a>, made with love for a better web
         </p>
     </div>
 </footer>
