--- a/src/assets/sass/lbd/_cards.scss
+++ b/src/assets/sass/lbd/_cards.scss
@@ -53,7 +53,7 @@
     label{
         font-size: $font-size-base;
         font-weight: $font-weight-normal;
-        color: $dark-gray;
+        color: #000;
         margin-bottom: 0px;
         
         i{
