--- a/src/assets/sass/lbd/_variables.scss
+++ b/src/assets/sass/lbd/_variables.scss
@@ -35,14 +35,14 @@ $transparent-bg:             transparent !default;
 
 $default-color:              #888888 !default;
 $default-bg:                 #888888 !default;
-$default-states-color:       #777777 !default;
+$default-states-color:       #000000 !default;
 
 $primary-color:              #3472F7 !default;
 $primary-bg:                 #3472F7 !default;
 $primary-states-color:       #1D62F0 !default;
 
-$success-color:              #87CB16 !default;
-$success-bg:                 #87CB16 !default;
+$success-color:              #28A745 !default;
+$success-bg:                 #28A745 !default;
 $success-states-color:       #049F0C !default;
 
 $info-color:                 #1DC7EA !default;
