--- a/src/app/pages/cadastrar-clinica/cadastrar-clinica.component.html
+++ b/src/app/pages/cadastrar-clinica/cadastrar-clinica.component.html
@@ -125,6 +125,18 @@
               </div>
               <div class="row">
                 <div class="col-md-12">
+                  <label for="especialidades">Especialidades: </label>
+                  <tag-input
+                    id="especialidades"
+                    formControlName="especialidades"
+                    [placeholder]="'Insira uma nova especialidade'"
+                    [secondaryPlaceholder]="'Insira aqui as especialidades'"
+                    [inputClass]="'form-control'"
+                  ></tag-input>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-md-12">
                   <button
                     class="btn btn-danger btn-fill pull-left"
                     type="button"
