--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -7,7 +7,15 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" style="color: black;" href="#" >{{getTitle()}}</a>
+            <a class="navbar-brand navbar-left" style="color: black;" href="#" >{{getTitle()}}</a>
+            <ul class="nav navbar-nav navbar-right">
+                <li class="dropdown">
+                    <a class="dropdown-toggle" data-toggle="dropdown">{{getUsername()}} <b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                        <a (click)="sair()">Sair</a>
+                    </ul>
+                </li>
+            </ul>
         </div>
     </div>
 </nav>
