--- a/src/app/pages/agentes/agentes.component.html
+++ b/src/app/pages/agentes/agentes.component.html
@@ -7,7 +7,6 @@
             <h4 class="title pull-left">Agentes</h4>
             <a [routerLink]="'adicionar/'">
               <button class="btn btn-success btn-fill pull-right">
-                <span><i class="pe-7s-add-user"></i></span>
                 <span>Cadastrar Agente</span>
               </button>
             </a>
@@ -25,7 +24,8 @@
                 <div>
                   <form class="form-inline" [formGroup]="filtroGroup">
                     <div class="form-group">
-                      <label for="situacao">Situação: </label>
+                      <label for="situacao">Status: </label>
+                      <br>
                       <select
                         id="situacao"
                         class="form-control"
@@ -38,6 +38,7 @@
                     </div>
                     <div class="form-group">
                       <label for="estado">Estado: </label>
+                      <br>
                       <select
                         name="estado"
                         id="estado"
@@ -59,6 +60,7 @@
 
                     <div class="form-group">
                       <label for="cidade">Cidade: </label>
+                      <br>
                       <select
                         name="cidade"
                         id="cidade"
@@ -76,16 +78,25 @@
                         >
                       </select>
                     </div>
-                    <div class="form-group">
-                      <label for="pesquisar">Nome:</label>
-                      <input
-                        class="form-control"
-                        id="pesquisar"
-                        name="pesquisar"
-                        placeholder="Pesquisar"
-                        formControlName="pesquisa"
-                      />
+
+                    <div class="row">
+                      <div class="col-md-6">
+                        <div class="">
+                            <label for="pesquisar">Nome:</label>
+                            <br>
+                            <input
+                              class="form-control"
+                              id="pesquisar"
+                              name="pesquisar"
+                              placeholder="Pesquisar"
+                              formControlName="pesquisa"
+                              style="min-width:100%"
+                            />
+                          </div>
+                        </div>
                     </div>
+
+                  
                   </form>
                 </div>
               </div>
