--- a/src/app/pages/auth/auth.component.html
+++ b/src/app/pages/auth/auth.component.html
@@ -1,8 +1,19 @@
 <div class="main-content">
+
+  <div class="row">
+
+
+  </div>
+
+
   <div class="container-fluid">
+
     <div class="row">
       <div class="login">
           <div class="card">
+              <div class="text-center">
+              <img class="rounded" src="assets/img/logoacesso.png" alt="Imagem responsiva">
+              </div>
               <div class="header">
                 <h4 class="title">Login</h4>
               </div>
