--- a/src/app/pages/clientes/clientes.component.html
+++ b/src/app/pages/clientes/clientes.component.html
@@ -40,6 +40,7 @@
                 <form class="form-inline" [formGroup]="filtroGroup">
                   <div class="form-group">
                       <label for="estado">Estado: </label>
+                      <br>
                       <select
                             name="estado"
                             id="estado"
@@ -59,7 +60,7 @@
                           </select>
                   </div>
                   <div class="form-group">
-                      <label for="cidade">Cidade: </label>
+                      <label for="cidade">Cidade: </label><br>
                       <select
                         name="cidade"
                         id="cidade"
@@ -77,16 +78,20 @@
                         >
                       </select>
                   </div>
-                  <div class="form-group">
+                  <div class="row">
+                    <div class="col-md-6">
                       <label for="pesquisar">Nome:</label>
+                      <br>
                       <input
                         class="form-control"
                         id="pesquisar"
                         name="pesquisar"
                         placeholder="Pesquisar"
                         formControlName="pesquisa"
+                        style="min-width:100%"
                       />
                     </div>
+                  </div>
                 </form>
               </div>
             </div>
