--- a/src/app/pages/clinicas/clinicas.component.html
+++ b/src/app/pages/clinicas/clinicas.component.html
@@ -50,7 +50,6 @@
             <h4 class="title pull-left">Clínicas</h4>
             <a [routerLink]="'adicionar/'">
               <button class="btn btn-success btn-fill pull-right">
-                <span><i class="pe-7s-add-user"></i></span>
                 <span>Cadastrar Clínica</span>
               </button>
             </a>
@@ -66,7 +65,8 @@
               <div class="col-md-12 filtros">
                 <form class="form-inline" [formGroup]="filtroGroup">
                   <div class="form-group">
-                    <label for="situacao">Situação: </label>
+                    <label for="situacao">Status: </label>
+                  <br>
                     <select
                       name="situacao"
                       id="situacao"
@@ -81,6 +81,7 @@
 
                   <div class="form-group">
                     <label for="estado">Estado: </label>
+                    <br>
                     <select
                       name="estado"
                       id="estado"
@@ -99,6 +100,7 @@
 
                   <div class="form-group">
                     <label for="cidade">Cidade: </label>
+                    <br>
                     <select
                       name="cidade"
                       id="cidade"
@@ -114,16 +116,20 @@
                     </select>
                   </div>
 
-                  <div class="form-group">
+                  <div class="row">
+                    <div class="col-md-6">
                     <label for="pesquisa">Nome:</label>
+                    <br>
                     <input
                     name="pesquisa"
                     id="pesquisa"
                     class="form-control"
                     placeholder="Pesquisar"
                     formControlName="pesquisa"
+                    style="min-width:100%"
                   />
                   </div>
+                </div>
                 </form>
               </div>
             </div>
